<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Just Java</string>
    <string name="customer_name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>

    <string name="order_summary_name">Name: <xliff:g id="name">%s</xliff:g></string>
    <string name="order_summary_chocolate">\nAdd chocolate? <xliff:g id="addChocolate">%b</xliff:g></string>
    <string name="order_summary_cream">\nAdd whipped cream? <xliff:g id="addCream">%b</xliff:g></string>
    <string name="order_summary_quantity">\nQuantity: <xliff:g id="quantity">%d</xliff:g></string>
    <string name="order_summary_total">\nTotal: <xliff:g id="price">%s</xliff:g></string>
    <string name="thank_you">\nThank you!</string>

    <string name="subject">Just Java order for <xliff:g id="subject">%s</xliff:g></string>

</resources>